adjusted spacing of folders in the bookmarks bar, fixing issue #67

--- a/theme/chrome/browser/browser.css
+++ b/theme/chrome/browser/browser.css
@@ -94,7 +94,17 @@
 /* Places toolbar */
 toolbarbutton.bookmark-item {
   margin: 0;
-  padding: 2px 3px;
+  padding: 2px 6px;
+}
+
+.toolbarbutton-icon[label]:not([label=""]),
+.toolbarbutton-icon[type="menu"] {
+  -moz-margin-end: 4px;
+  vertical-align: middle;
+}
+
+.bookmark-item[container][livemark] .toolbarbutton-icon {
+  -moz-margin-end: 0;
 }
 
 /*toolbarbutton.bookmark-item:hover:active,
